<resources>
    <string name="app_name">Android_App</string>
    <string name="action_settings">Settings</string>

    <!-- Second fragment -->
    <string name="second_fragment_label">UNKNOWN</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">UNKNOWN</string>

    <!-- First fragment -->
    <string name="first_fragment_label">Keypad</string>
    <string name="display_prompt_default">Press any button</string>
    <string name="ad_interstitial_button">Show interstitial Ad</string>
    <string name="ad_banner_button">Show banner Ad</string>
    <string name="ad_rewarded_button">Show rewarded Ad</string>
    <string name="reward_current_amount">Total reward: %1$s</string>
    <string name="B1">1</string>
    <string name="B2">2</string>
    <string name="B3">3</string>
    <string name="B4">4</string>
    <string name="B5">5</string>
    <string name="B6">6</string>
    <string name="B7">7</string>
    <string name="B8">8</string>
    <string name="B9">9</string>
    <string name="B0">0</string>
    <string name="BClear">C</string>
</resources>